--- a/style.css
+++ b/style.css
@@ -66,6 +66,14 @@ a:visited{
     align-items: center;
     flex-direction: row;
     border: 0;
+    padding: 0;
+    margin: 0;
+}
+
+iframe{
+    width: 100%;
+    height: 100%;
+    
 }
 
 .footer-frame{
@@ -189,9 +197,6 @@ a:visited{
     color: white;
     margin: 1em;
     height: 20em;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
 }
 
 .blurb-image{
