--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ a:visited{
 iframe{
     width: 100%;
     height: 100%;
-    
 }
 
 .footer-frame{
@@ -197,9 +196,14 @@ iframe{
     color: white;
     margin: 1em;
     height: 20em;
+    position: relative;
 }
 
 .blurb-image{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -70px 0 0 -85px;
 }
 
 .blurb-header{
