--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ iframe{
     justify-content: center;
     align-items: center;
     padding: 1em;
-    width: 100%;
+    width: 50%;
 }
 
 .top-product{
@@ -180,6 +180,8 @@ iframe{
 
 .product-image{
     align-items: center;
+    width: 170px;
+    height: 170px;
 }
 
 .section-home-blurb{
