--- a/style.css
+++ b/style.css
@@ -70,6 +70,16 @@ a:visited{
     margin: 0;
 }
 
+.hero-container{
+    display: flex;
+    width: 100%;
+    background-color: var(--primary-color);
+}
+
+.hero-image{
+
+}
+
 iframe{
     width: 100%;
     height: 100%;
