--- a/style.css
+++ b/style.css
@@ -75,14 +75,31 @@ a:visited{
 }
 
 .hero-container{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
     width: 100%;
     background-color: var(--primary-color);
     height: 100vh;
 }
 
-.hero-image{
+.hero-image-text-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 1em;
+    width: 100%;
+}
 
+.hero-image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    width: 100%;
 }
 
 iframe{
