--- a/style.css
+++ b/style.css
@@ -188,3 +188,20 @@ iframe{
     align-items: center;
     margin-top: 5rem;
 }
+
+.two-panel-row-container-reverse{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
+}
+
+.two-panel-row-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    width: 100%;
+    margin-top: 3rem;
+}
