--- a/style.css
+++ b/style.css
@@ -205,3 +205,21 @@ iframe{
     width: 100%;
     margin-top: 3rem;
 }
+
+.four-panel-row-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
+    width: 80%;
+    margin-left: 10%;
+}
+
+.logo-image{
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    width: 60px;
+    height: 60px;
+}
