--- a/style.css
+++ b/style.css
@@ -164,6 +164,19 @@ iframe{
     width: 100%;
 }
 
+.card-three-element label{
+    font-size: 1.5rem;
+    margin: 1rem;
+}
+
+.card-three-element input{
+  padding: 1rem;
+  margin: 1rem;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  border: 1px solid var(--primary-color);
+}
+
 .single-center-panel-row{
     display: flex;
     justify-content: center;
